# flexget_qbittorrent_mod

./: .gitignore  CHANGELOG.md  LICENSE  README.md  auto_sign_in.py  auto_sign_in.yml  cfscraper_mod.py  config.yml  config_example.yml  html_rss.py  iyuu_auto_reseed.py  pyproject.toml  qbittorrent_client.py  qbittorrent_mod.py  question.json  question_extend.json  show_entry.py  telegram_mod.py  wechat_work.py  wecom.py  work_weixin.py
image-builder/: Dockerfile  build.sh  docker-compose.yml  link_chromium.py
ptsites/: _version.py  discuz.py  executor.py  gazelle.py  meantorrent.py  nexusphp.py  question_extend.json  site_base.py
ptsites/base/: base.py  detail.py  entry.py  get_details.py  message.py  request.py  reseed.py  sign_in.py  site_base.py  work.py
ptsites/client/: qbittorrent_client.py  transmission_patch.py
ptsites/data/: 52pt.json  chdbits.json  ptchdbits.json  tjupt.json
ptsites/qbittorrent/: __init__.py  operations.py  plugin.py
ptsites/schema/: avistaz.py  discuz.py  gazelle.py  luminance.py  meantorrent.py  nexusphp.py  nexusphp_question.json  ocelot.py  private_torrent.py  site_base.py  unit3d.py  xbt.py  xbtit.py  xwt.py
ptsites/sites/: 0ff.py  1468.py  1ptba.py  3wmg.py  52pt.py  abn.py  abtorrents.py  aither.py  audiences.py  avgv.py  avistaz.py  azusa.py  beitai.py  beyond-hd.py  bitbr.py  bitporn.py  bitsexy.py  blutopia.py  bootytape.py  btschool.py  byr.py  byrbt.py  carpt.py  cathode-ray.py  ccfbits.py  chdbits.py  cinemaz.py  crabpt.py  crypt.py  cyanbug.py  (+121 more)
scripts/: build_dist.ps1
test/: auto_sign_in.py
tests/: conftest.py
(+72 files in other folders)
