[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "flexget-qbittorrent-mod"
version = "0.8.13.dev0"
description = "FlexGet plugins for qBittorrent automation and private tracker workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "FlexGet>=3.17,<4",
    "chardet>=5,<6",
    "loguru>=0.7,<1",
    "numpy>=1.24",
    "Pillow>=10",
    "python-dateutil>=2.8",
    "requests>=2.31,<3",
    "SQLAlchemy>=2,<3",
]

[project.optional-dependencies]
ocr = ["baidu-aip>=4.16,<5"]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["ptsites*"]

[tool.setuptools.package-data]
ptsites = ["data/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: performs real network requests and requires explicit credentials",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

